--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -1,10 +1,28 @@
 <!doctype html>
 
-
 <head><title>Test</title>
     <meta charset=utf-8>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">GANs</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Demo <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign in</button>
+    </form>
+  </div>
+</nav>
 
 
     <h2> Our app </h2>
@@ -23,35 +41,9 @@
     <input type="submit">
     </form>
 
-{#    <script>#}
-{##}
-{#        const state_select = document.getElementById("state");#}
-{#        const city_select = document.getElementById("city");#}
-{##}
-{#        state_select.onchange = function()  {#}
-{##}
-{#            state = state_select.value;#}
-{##}
-{#            fetch('/city/' + state).then(function(response) {#}
-{##}
-{#                response.json().then(function(data) {#}
-{#                    var optionHTML = '';#}
-{##}
-{#                    for (var city of data.cities) {#}
-{#                        optionHTML += '<option value="' + city.id + '">' + city.name + '</option>';#}
-{#                    }#}
-{##}
-{#                    city_select.innerHTML = optionHTML;#}
-{#                })#}
-{##}
-{#            });#}
-{#        }#}
-{#    </script>#}
 
-
-<br><br><br><br>
-{% for role in roles %}
-<h3>{{role.role_name}}</h3>
-{% endfor %}
+{#{% for role in roles %}#}
+{#<h3>{{role.role_name}}</h3>#}
+{#{% endfor %}#}
 
 </body>
