added DB entities

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -41,9 +41,12 @@
     <input type="submit">
     </form>
 
+<br><br><br>
+<h2> Hello </h2>
+<br>
+{% for role in roles %}
+<h3>{{role.role_name}}</h3>
+{% endfor %}
 
-{#{% for role in roles %}#}
-{#<h3>{{role.role_name}}</h3>#}
-{#{% endfor %}#}
 
 </body>
