--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 
-<head><title>Test</title>
+<head><title>Home</title>
     <meta charset=utf-8>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">GANs</a>
+  <a class="navbar-brand" href="/">GANs</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,9 +18,9 @@
         <a class="nav-link" href="#">Demo <span class="sr-only">(current)</span></a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign in</button>
-    </form>
+
+    <a class="button" href="{{ url_for('auth') }}">Sign in</a>
+
   </div>
 </nav>
 
