login and register logic added

--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
 
-    <a class="button" href="{{ url_for('auth') }}">Sign in</a>
+    <a class="button" href="{{ url_for('login') }}">Sign in</a>
 
   </div>
 </nav>
