--- a/flask/app/templates/register.html
+++ b/flask/app/templates/register.html
@@ -29,6 +29,7 @@
    <form method="POST" action="">
         {{ form.hidden_tag() }}
         {{ form.login }}
+        {{ form.email }}
         {{ form.password }}
         {{ form.submit }}
     </form>
