--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,42 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Auth</title>
-</head>
-<body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">GANs</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+{% extends "base.html" %}
+{% block title %} Home page {% endblock %}
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Demo <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
 
-  </div>
-</nav>
+{% block content %}
 
-  <h1>Login Page</h1>
+    <br>
+ <div class="container">
+        <br>
 
-    <form method="POST" action="">
+      <form class="form-signin" method="POST" action="/login">
+        <h2 class="form-signin-heading">Please sign in</h2>
         {{ form.hidden_tag() }}
         {{ form.login }}
         {{ form.password }}
-        {{ form.submit }}
-    </form>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
 
 
-    <a href="{{ url_for('login') }}">Sign in for company</a>
+   <br>
+     <a href="{{ url_for('login') }}">Sign in for company</a>
     <br>
     <a href="{{ url_for('register') }}">Don't have an account? Sign Up</a>
+    </div>
 
-</body>
-</html>
+{% endblock %}
+
+
