--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Register</title>
-</head>
-<body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">GANs</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+{% extends "base.html" %}
+{% block title %} Home page {% endblock %}
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Demo <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
 
-  </div>
-</nav>
+{% block content %}
 
-  <h1>Register Page</h1>
+    <br>
+<h1>Register Page</h1>
 
    <form method="POST" action="">
         {{ form.hidden_tag() }}
@@ -37,6 +20,5 @@
   <br>
   <a href="{{ url_for('register') }}">Register for company</a>
 
+{% endblock %}
 
-</body>
-</html>
