--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,23 +7,34 @@
 {% block content %}
 
     <br>
- <div class="container">
-        <br>
 
-      <form class="form-signin" method="POST" action="/login">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        {{ form.hidden_tag() }}
-        {{ form.login }}
-        {{ form.password }}
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <main class="form-signin w-25 m-auto">
+      <form  class="form-signin" method="POST" action="/login">
+        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            {{ form.hidden_tag() }}
+        <div class="form-floating">
+             {{ form.login }}
+        </div>
+          <br>
+        <div class="form-floating">
+            {{ form.password }}
+        </div>
+          <br>
+        <div class="checkbox mb-3">
+          <label>
+            {{ form.remember }} Remember me
+          </label>
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
       </form>
+    </main>
+
 
 
    <br>
      <a href="{{ url_for('login') }}">Sign in for company</a>
     <br>
     <a href="{{ url_for('register') }}">Don't have an account? Sign Up</a>
-    </div>
 
 {% endblock %}
 
