--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -5,7 +5,16 @@
 {% block content %}
 
     <br>
- <h1>Hello you are logged in.</h1>
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <h2>{{ message }}</h2>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
+    <br>
     <a href="{{url_for('logout')}}">Press here to logout</a>
 
 {% endblock %}
