--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,7 +67,7 @@
   </head>
   <body class="text-center">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="/">GANs</a>
+        <a class="navbar-brand mb-0 h1" href="/">GANs</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -76,9 +76,13 @@
              <li class="nav-item active">
                <a class="navbar-brand" href="{{ url_for('demo')}}">Demo</a>
              </li>
+                  <li class="nav-item active">
+                 <a class="navbar-brand" href="{{ url_for('profile') }}">Profile</a>
+                </li>
+                 <li class="nav-item active ">
+                  <a class="navbar-brand" href="{{ url_for('login') }}">Sign in</a>
+                </li>
             </ul>
-             <a class="navbar-brand" href="{{ url_for('login') }}">Sign in</a>
-
         </div>
     </nav>
 
