--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,17 @@
 {% block content %}
 
     <br>
-<h2> Our app </h2>
+<h2> Неше приложение </h2>
+
+     <br>
+    <p>
+    Встречайте нашу нейросеть!
+    </p>
+
+    <p>
+    Напишите текстовый запрос — получите сгенерированную ИИ картинку
+    </p>
+
 
 {% endblock %}
 
