--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -12,7 +12,7 @@
 
     <main class="form-signin w-25 m-auto">
       <form  class="form-signin" method="POST" action="/login">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 fw-normal">Пожалуйста выполните вход</h1>
             {{ form.hidden_tag() }}
         <div class="form-floating">
              {{ form.login }}
@@ -24,19 +24,20 @@
           <br>
         <div class="checkbox mb-3">
           <label>
-            {{ form.remember }} Remember me
+            {{ form.remember }} Запомнить меня
           </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
       </form>
     </main>
 
 
 
    <br>
-     <a href="{{ url_for('login') }}">Sign in for company</a>
+     <a href="{{ url_for('login') }}">Регистрация для юридических лиц</a>
     <br>
-    <a href="{{ url_for('register') }}">Don't have an account? Sign Up</a>
+     <br>
+    <a href="{{ url_for('register') }}">Нет аккаунта? зарегистрируйтесь</a>
 
 {% endblock %}
 
