--- a/app/templates/demo.html
+++ b/app/templates/demo.html
@@ -19,9 +19,8 @@
     <br>
 
     <p>
-    <h5>Напишите текстовый запрос и получите сгенерированную ruDALL-E картинку</h5>
-    </p>
-<br>
+    <h5>Напишите текстовый запрос и получите сгенерированную картинку</h5>
+    <br>
      <form method="POST">
     {{ form.csrf_token }}
 {#    {{ form.sex }}#}
