--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -16,7 +16,7 @@
         {% endif %}
     {% endwith %}
 
-    <br>
-    <a href="{{url_for('logout')}}">Press here to logout</a>
+{#    <br>#}
+{#    <a href="{{url_for('logout')}}">Press here to logout</a>#}
 
 {% endblock %}
