--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -79,9 +79,17 @@
                   <li class="nav-item active">
                  <a class="navbar-brand" href="{{ url_for('profile') }}">Профиль</a>
                 </li>
+
+
                  <li class="nav-item active ">
                   <a class="navbar-brand" href="{{ url_for('login') }}">Вход</a>
                 </li>
+
+                 <li class="nav-item active ">
+                  <a class="navbar-brand" href="{{ url_for('logout') }}">Выход</a>
+                </li>
+
+
             </ul>
         </div>
     </nav>
