--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="theme-color" content="#712cf9">
+    <link href="../static/styles/all_pages.css" rel="stylesheet">
 
      {% block css_link %}
      {% endblock %}
@@ -97,6 +98,13 @@
 
         {% block content %} {% endblock %}
 
+
+    <footer class="bg-light text-center text-lg-start">
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+       <h5> <a class="text-dark" href="https://github.com/DarkPrinceWarrior/GANs-in-web-app.git">
+            GitHub проекта</a></h5>
+      </div>
+    </footer>
 
 
     <!-- Optional JavaScript -->
