--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -81,6 +81,10 @@
                  <a class="navbar-brand" href="{{ url_for('profile') }}">Профиль</a>
                 </li>
 
+                 <li class="nav-item active ">
+                  <a class="navbar-brand" href="{{ url_for('saveImage') }}">Сохранить</a>
+                </li>
+
 
                  <li class="nav-item active ">
                   <a class="navbar-brand" href="{{ url_for('login') }}">Вход</a>
